@@ -62,7 +62,6 @@ noinst_HEADERS = \
   SplitLedger.h \
   file-history.h \
   gnc-component-manager.h \
-  gnc-dir.h \
   gnc-exp-parser.h \
   gnc-ui.h \
   gnc-ui-common.h \
@@ -70,8 +69,7 @@ noinst_HEADERS = \
   messages.h
 
 EXTRA_DIST = \
-  .cvsignore \
-  gnc-dir.h.in
+  .cvsignore
 
 CFLAGS = @CFLAGS@ ${GNOME_INCLUDEDIR} ${GUILE_INCS}
 
@@ -80,20 +78,3 @@ INCLUDES = \
   -I./engine \
   -I./guile \
   -I./register
-
-## We borrow guile's convention and use @-...-@ as the substitution
-## brackets here, instead of the usual @...@.  This prevents autoconf
-## from substituting the values directly into the left-hand sides of
-## the sed substitutions.
-gnc-dir.h: gnc-dir.h.in
-	rm -f $@.tmp
-	sed < $@.in > $@.tmp \
-	    -e 's:@-GNC_PIXMAP_DIR-@:${GNC_PIXMAP_DIR}:g'
-	mv $@.tmp $@
-BUILT_SOURCES += gnc-dir.h
-
-# We have to do this because otherwise automake insists on putting
-# these files into the dist tarfile.  If there's a a better way,
-# by all means, let us know...
-dist-hook:
-	rm ${distdir}/gnc-dir.h
